Updates to models and services - abstracted entity configuration

--- a/web/appsettings.json
+++ b/web/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "ConnectionStrings": {
+    "TekOnSiteConnectionString": "Data Source=THINGTWO\\SQLExpress;Initial Catalog=TekOnSite; Integrated Security=True;"
+  }
+
 }
